Adjust and update the database system in the embedded derby

--- a/Assignment1/nbproject/project.properties
+++ b/Assignment1/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/Assignment1
 endorsed.classpath=
 excludes=
 file.reference.derby.jar=db-derby-10.14.2.0-lib/db-derby-10.14.2.0-lib/lib/derby.jar
+file.reference.derbyclient.jar=db-derby-10.14.2.0-lib/db-derby-10.14.2.0-lib/lib/derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -139,7 +140,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
