--- a/Assignment1/nbproject/project.properties
+++ b/Assignment1/nbproject/project.properties
@@ -140,9 +140,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.derby.jar}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.derbyclient.jar}:\
-    ${file.reference.derby.jar}
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
