--- a/.github/workflows/pokergame_poker.yml
+++ b/.github/workflows/pokergame_poker.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: './dist/Assignment1.jar'
 
   deploy:
     runs-on: windows-latest
